testsuite/tests/deriving/should_fail/T5922.hs
module T5922 where

data Proposition = Proposition deriving (show)
