testsuite/tests/deriving/should_fail/T5922.stderr
T5922.hs:3:42: error: [GHC-11913]
    • Illegal deriving item ‘show’
    • In the data type declaration for ‘Proposition’

